--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.28.4",
     "framer-motion": "^10.17.12",
     "next": "14.0.4",
     "next-themes": "^0.3.0",
     "nextjs-progressbar": "^0.0.16",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-fast-marquee": "^1.6.4",
     "react-intersection-observer": "^9.8.1",
     "typewriter-effect": "^2.21.0"
   },
