--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@tanstack/react-query": "^5.28.4",
+    "@tanstack/react-query": "^5.28.6",
     "framer-motion": "^10.17.12",
+    "mongoose": "^8.2.3",
     "next": "14.0.4",
     "next-themes": "^0.3.0",
     "nextjs-progressbar": "^0.0.16",
@@ -18,6 +19,7 @@
     "react-dom": "^18.2.0",
     "react-fast-marquee": "^1.6.4",
     "react-intersection-observer": "^9.8.1",
+    "react-toastify": "^10.0.5",
     "typewriter-effect": "^2.21.0"
   },
   "devDependencies": {
