--- a/package.json
+++ b/package.json
@@ -9,22 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@tanstack/react-query": "^5.28.6",
-    "framer-motion": "^10.17.12",
-    "mongoose": "^8.2.3",
-    "next": "14.0.4",
+    "@headlessui/react": "^2.1.10",
+    "next": "^14.2.15",
     "next-themes": "^0.3.0",
-    "nextjs-progressbar": "^0.0.16",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-fast-marquee": "^1.6.4",
-    "react-intersection-observer": "^9.8.1",
-    "react-toastify": "^10.0.5",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "typewriter-effect": "^2.21.0"
   },
   "devDependencies": {
-    "autoprefixer": "^10.0.1",
-    "postcss": "^8",
-    "tailwindcss": "^3.3.0"
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.47",
+    "tailwindcss": "^3.4.14"
   }
 }
